fixes, need to fix squished images

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@
 body {
   background-image: linear-gradient(to bottom, #a7afb3, #d3d7d9);
   margin: 0;
+  padding: 0;
+  width: 100%;
+  min-width: 500px;
 }
 :root {
   /* Base 16 px */
@@ -40,6 +43,9 @@ body {
 
 img {
   display: block;
+}
+picture img{
+  border-radius: 10px;
 }
 header {
   color: var(--header-primary);
@@ -230,7 +236,7 @@ footer {
 }
 
 #popup{
-  position: fixed;
+  position: sticky;
   top: 50%;
   left: 10%;
   right: 10%;
@@ -249,10 +255,10 @@ footer {
       ".          indisk    indisk    ."
       ".      jakt   jakt   .";
   }
-  header picture img {
+  /* header picture img {
     width: 100%;
     height: 70%;
-  }
+  } */
   nav {
     margin-bottom: 40px;
   }
